crates/aranya-policy-compiler/tests/data/commands/recall_statement_arg_mismatch.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: string
  |
6 |         recall handle("not an int")
  |                       ^^^^^^^^^^^^ expected `int` but found `string`
7 |     }
8 |     recall handle(x int) {
  |                     --- expected because of this
